--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,14 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^7.6.0",
-    "react-scripts": "^5.0.0",
-    "tailwindcss": "^3.2.4"
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "@tailwindcss/postcss": "^4.1.7",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7"
   },
   "browserslist": {
     "production": [
